[FIX] Fixed the issue of cropped tooltip in form view and wizard.

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -2751,6 +2751,7 @@ body.oe_single_form
     background: white
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5)
     background-color: transparent
+    position: fixed
     .tooltip-inner
         text-align: left !important
         max-width: 350px
